--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
    {{>header}}
-    
+    <p>This site is created by Rahul Prajapati.It use data from mapbox.com and weatherstack.com!</p>
     <img class="portrait" src="/img/about.jpg">
     </div>
     
